# HandVolumeControl

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
custom-triplets/: x64-windows.cmake
mediapipe_hand-onnx-float/: hand_detector.onnx  hand_landmark_detector.onnx  metadata.json
src/: HandLandmarker.cpp  HandLandmarker.hpp  PalmDetector.cpp  PalmDetector.hpp  main.cpp  npy.hpp
